--- a/CityGuide.UI/angular.json
+++ b/CityGuide.UI/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "CityGuide.UI": {
+    "CityGuideUI": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,9 +25,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootswatch/dist/minty/bootstrap.min.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css",
+              "node_modules/alertifyjs/build/css/themes/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -60,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "CityGuide.UI:build:production"
+              "browserTarget": "CityGuideUI:build:production"
             },
             "development": {
-              "browserTarget": "CityGuide.UI:build:development"
+              "browserTarget": "CityGuideUI:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "CityGuide.UI:build"
+            "browserTarget": "CityGuideUI:build"
           }
         },
         "test": {
