--- a/CityGuide.UI/package.json
+++ b/CityGuide.UI/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@daelmaak/ngx-gallery": "^3.0.2",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
@@ -27,7 +29,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular-devkit/build-angular": "^17.0.7",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
