--- a/CityGuide.UI/package.json
+++ b/CityGuide.UI/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
     "ng-gallery": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
