dosya yükleme ve açıklama için text editor eklendi

--- a/CityGuide.API/appsettings.json
+++ b/CityGuide.API/appsettings.json
@@ -3,7 +3,8 @@
     "Token": "benimsüpergizlianahtarım"
   },
   "ConnectionStrings": {
-    "DefaultConection": "Data Source=CUSTOMOS\\SQLEXPRESS;Initial Catalog=CityGuide;Integrated Security=True;Trust Server Certificate=False;Encrypt=False;"
+    //"DefaultConection": "Data Source=CUSTOMOS\\SQLEXPRESS;Initial Catalog=CityGuide;Integrated Security=True;Trust Server Certificate=False;Encrypt=False;"
+    "DefaultConection": "Data Source=DESKTOP-6C41MI1\\SQLEXPRESS;Initial Catalog=cityguide;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     //"DefaultConection": "Data Source=CUSTOMOS\\SQLEXPRESS;Initial Catalog=CityGuide;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
